update jam 9 tanggal 18

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".Dashboard"/>
         <activity android:name=".Suhu"/>
         <activity android:name=".Bilangan"/>
+        <activity android:name=".Massa"/>
+        <activity android:name=".Waktu"/>
 
     </application>
 
